# Fish-Net

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
configs/: deepfish.yaml
deepfish/annotations/: deepfish_coco_test.json  deepfish_coco_train.json  deepfish_coco_val.json
kgl_code/: dataset-metadata.json
kgl_data/: dataset-metadata.json
scripts/: eval_fishnet.py  infer_image.py  pretrain_fi.py  train_fishnet.py
src/fishnet/: __init__.py  losses.py  model.py
src/fishnet.egg-info/: PKG-INFO  SOURCES.txt
src/fishnet/data/: deepfish.py
src/fishnet/modules/: fi.py  swin.py
src/fishnet/utils/: post.py
src/fishnet/yolo/: backbone.py  blocks.py  head.py  neck.py
tests/: sanity_check.py
